apps/text-generation-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-generation-webui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text-generation-webui
  template:
    metadata:
      labels:
        app: text-generation-webui
    spec:
      runtimeClassName: nvidia
      # initContainers:
      #   - name: storage-init
      #     image:  "atinoda/text-generation-webui:default-nvidia"
      #     command: [ 'sh', '-c', "if [ ! -f /init/settings.yaml ]; then cp /app/settings-template.yaml /init/settings.yaml; fi" ]
      #     volumeMounts:
      #       - mountPath: '/init/'
      #         name: storage
      containers:
        - name: oobabooga
          image: "atinoda/text-generation-webui:default-nvidia"
          imagePullPolicy: IfNotPresent

          ports:
            - name: webui
              containerPort: 7860
              protocol: TCP
            - name: api
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              nvidia.com/gpu: '4'
              cpu: '7000m'
              memory: 8Gi
            limits:
              nvidia.com/gpu: '4'
              cpu: '15000m'
              memory: 32Gi

          volumeMounts:
            - mountPath: app/CMD_FLAGS.txt
              name: config-data
              subPath: CMD_FLAGS
              readOnly: true
            - mountPath: /user_data/models/
              name: storage
              subPath: models
            - mountPath: /user_data/characters/
              name: storage
              subPath: characters
            - mountPath: /user_data/.cache/
              name: storage
              subPath: cache
            - mountPath: /user_data/extensions/
              name: storage
              subPath: extensions

      volumes:
        - name: config-data
          configMap:
            name: config
            items:
              - key: CMD_FLAGS
                path: CMD_FLAGS
        - name: storage
          persistentVolumeClaim:
            claimName: webui-storage
